bump sbt & plugin versions
(cherry picked from commit 36f4a2a)